# geant4_edu_proj

./: CMakeLists.txt  doGraph.sh  init.sh  main.cpp  process.cpp
include/: ActionInitialization.hh  DetectorConstruction.hh  EventAction.hh  PrimaryGeneratorAction.hh  RunAction.hh  SimpleDetectorConstruction.hh  SteppingAction.hh
res/: Makefile  process  process.cpp  run_layers.sh
src/: ActionInitialization.cc  DetectorConstruction.cc  EventAction.cc  PrimaryGeneratorAction.cc  RunAction.cc  SimpleDetectorConstruction.cc  SteppingAction.cc
